fix langding page on small screens

--- a/client/src/observatory/landing.scss
+++ b/client/src/observatory/landing.scss
@@ -37,7 +37,9 @@
     }
 
     @media (max-width: #{$screen-md - 1}) {
-      grid-template-areas: "form" "svg";
+      grid-template:
+        "form" auto
+        "svg" auto;
 
       .landing-illustration {
         text-align: center;
@@ -76,6 +78,7 @@
         border-top-left-radius: var(--border-radius);
         flex-grow: 1;
         padding: 0 0.75rem;
+        width: 100%;
       }
 
       button {
